--- a/index.html
+++ b/index.html
@@ -1,117 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GIV DAO - Coming Soon</title>
-    <meta name="description" content="Impact Ignition: 1% Profits to Uplift">
+    <meta
+      name="description"
+      content="Impact Ignition: 1% Profits to Uplift"
+    />
     <style>
-        body { margin: 0; overflow: hidden; background: #000; }
-        canvas { display: block; }
-        .thumbs { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 10; }
-        .thumb-btn { background: linear-gradient(45deg, #ffd700, #ffed4e); color: #000; border: none; padding: 15px 20px; margin: 0 15px; border-radius: 50%; cursor: pointer; font-size: 24px; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); }
-        .thumb-btn:hover { transform: scale(1.1); box-shadow: 0 6px 20px rgba(255, 215, 0, 0.5); }
-        .thumb-btn:active { transform: scale(0.95); }
+      @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap");
+      body {
+        margin: 0;
+        overflow: hidden;
+        background: #000;
+        font-family: "Playfair Display", serif;
+        color: #f0f0f0;
+      }
+      canvas {
+        display: block;
+      }
+      .thumbs {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 10;
+      }
+      .thumb-btn {
+        background: none;
+        color: #ccc;
+        border: none;
+        padding: 10px;
+        margin: 0 15px;
+        cursor: pointer;
+        font-size: 34px;
+        transition: all 0.3s ease;
+      }
+      .thumb-btn:hover {
+        transform: scale(1.1);
+        color: #fff;
+      }
+      .thumb-btn:active {
+        transform: scale(0.95);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <canvas id="canvas"></canvas>
     <div class="thumbs">
-        <button class="thumb-btn" onclick="vote('up')">👍 <span id="up-count">0</span></button>
-        <button class="thumb-btn" onclick="vote('down')">👎 <span id="down-count">0</span></button>
+      <button class="thumb-btn" onclick="vote('up')">
+        👍 <span id="up-count">0</span>
+      </button>
+      <button class="thumb-btn" onclick="vote('down')">
+        👎 <span id="down-count">0</span>
+      </button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script>
-        // Three.js Scene
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas'), antialias: true });
+      // Three.js Scene
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(
+        75,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
+      const renderer = new THREE.WebGLRenderer({
+        canvas: document.getElementById("canvas"),
+        antialias: true,
+      });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setClearColor(0x000000);
+
+      // Stars
+      const starGeometry = new THREE.BufferGeometry();
+      const starMaterial = new THREE.PointsMaterial({
+        color: 0xffffff,
+        size: 1.5,
+      });
+      const starVertices = [];
+      for (let i = 0; i < 1000; i++) {
+        starVertices.push((Math.random() - 0.5) * 2000);
+        starVertices.push((Math.random() - 0.5) * 2000);
+        starVertices.push((Math.random() - 0.5) * 2000);
+      }
+      starGeometry.setAttribute(
+        "position",
+        new THREE.Float32BufferAttribute(starVertices, 3)
+      );
+      const stars = new THREE.Points(starGeometry, starMaterial);
+      scene.add(stars);
+
+      // Glass Sphere
+      const sphereGeometry = new THREE.SphereGeometry(5, 64, 64);
+      const sphereMaterial = new THREE.MeshPhysicalMaterial({
+        color: 0xffffff,
+        metalness: 0,
+        roughness: 0,
+        transmission: 1,
+        thickness: 1,
+        ior: 1.5,
+        clearcoat: 1,
+        clearcoatRoughness: 0,
+      });
+      const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
+      scene.add(sphere);
+
+      // Text
+      const fontLoader = new THREE.FontLoader();
+      fontLoader.load(
+        "https://threejs.org/examples/fonts/helvetiker_regular.typeface.json",
+        (font) => {
+          const textGeometry = new THREE.TextGeometry("Coming Soon", {
+            font: font,
+            size: 3,
+            height: 0.1,
+          });
+          const textMaterial = new THREE.MeshBasicMaterial({ color: 0xffd700 });
+          const textMesh = new THREE.Mesh(textGeometry, textMaterial);
+          textMesh.position.set(0, 0, 0);
+          scene.add(textMesh);
+
+          // Animation
+          gsap.set(sphere.material, { transmission: 0 });
+          gsap.set(textMesh.material, { opacity: 0 });
+
+          gsap
+            .timeline()
+            .to(
+              sphere.material,
+              { transmission: 1, duration: 5.5, ease: "power2.inOut" },
+              0
+            )
+            .to(
+              textMesh.material,
+              { opacity: 1, duration: 5.5, ease: "power2.inOut" },
+              0
+            )
+            .to(
+              sphere.material,
+              { transmission: 0, duration: 5.5, ease: "power2.inOut" },
+              5.5
+            )
+            .to(
+              textMesh.material,
+              { opacity: 0, duration: 5.5, ease: "power2.inOut" },
+              5.5
+            );
+        }
+      );
+
+      camera.position.z = 10;
+
+      // Animate
+      function animate() {
+        requestAnimationFrame(animate);
+        stars.rotation.x += 0.0005;
+        stars.rotation.y += 0.0005;
+        sphere.rotation.y += 0.005;
+        renderer.render(scene, camera);
+      }
+      animate();
+
+      // Thumbs (localStorage for now)
+      let votes = JSON.parse(localStorage.getItem("thumbs") || "{}");
+      document.getElementById("up-count").textContent = votes.up || 0;
+      document.getElementById("down-count").textContent = votes.down || 0;
+      function vote(type) {
+        votes[type] = (votes[type] || 0) + 1;
+        localStorage.setItem("thumbs", JSON.stringify(votes));
+        document.getElementById(type + "-count").textContent = votes[type];
+        document
+          .querySelectorAll(".thumb-btn")
+          .forEach((btn) => (btn.disabled = true));
+      }
+
+      // Resize
+      window.addEventListener("resize", () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
         renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setClearColor(0x000000);
-
-        // Stars
-        const starGeometry = new THREE.BufferGeometry();
-        const starMaterial = new THREE.PointsMaterial({ color: 0xffffff, size: 0.5 });
-        const starVertices = [];
-        for (let i = 0; i < 1000; i++) {
-            starVertices.push((Math.random() - 0.5) * 2000);
-            starVertices.push((Math.random() - 0.5) * 2000);
-            starVertices.push((Math.random() - 0.5) * 2000);
-        }
-        starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
-        const stars = new THREE.Points(starGeometry, starMaterial);
-        scene.add(stars);
-
-        // Glass Sphere
-        const sphereGeometry = new THREE.SphereGeometry(5, 64, 64);
-        const sphereMaterial = new THREE.MeshPhysicalMaterial({
-            color: 0xffffff,
-            metalness: 0,
-            roughness: 0,
-            transmission: 1,
-            thickness: 1,
-            ior: 1.5,
-            clearcoat: 1,
-            clearcoatRoughness: 0,
-        });
-        const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
-        scene.add(sphere);
-
-        // Text
-        const fontLoader = new THREE.FontLoader();
-        fontLoader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', (font) => {
-            const textGeometry = new THREE.TextGeometry('Coming Soon', {
-                font: font,
-                size: 2,
-                height: 0.1,
-            });
-            const textMaterial = new THREE.MeshBasicMaterial({ color: 0xffd700 });
-            const textMesh = new THREE.Mesh(textGeometry, textMaterial);
-            textMesh.position.set(-5, 0, 5);
-            scene.add(textMesh);
-
-            // Animation
-            gsap.set(sphere.material, { transmission: 0 });
-            gsap.set(textMesh.material, { opacity: 0 });
-
-            gsap.timeline()
-                .to(sphere.material, { transmission: 1, duration: 5.5, ease: "power2.inOut" }, 0)
-                .to(textMesh.material, { opacity: 1, duration: 5.5, ease: "power2.inOut" }, 0)
-                .to(sphere.material, { transmission: 0, duration: 5.5, ease: "power2.inOut" }, 5.5)
-                .to(textMesh.material, { opacity: 0, duration: 5.5, ease: "power2.inOut" }, 5.5);
-        });
-
-        camera.position.z = 10;
-
-        // Animate
-        function animate() {
-            requestAnimationFrame(animate);
-            stars.rotation.x += 0.0005;
-            stars.rotation.y += 0.0005;
-            sphere.rotation.y += 0.005;
-            renderer.render(scene, camera);
-        }
-        animate();
-
-        // Thumbs (localStorage for now)
-        let votes = JSON.parse(localStorage.getItem('thumbs') || '{}');
-        document.getElementById('up-count').textContent = votes.up || 0;
-        document.getElementById('down-count').textContent = votes.down || 0;
-        function vote(type) {
-            votes[type] = (votes[type] || 0) + 1;
-            localStorage.setItem('thumbs', JSON.stringify(votes));
-            document.getElementById(type + '-count').textContent = votes[type];
-            document.querySelectorAll('.thumb-btn').forEach(btn => btn.disabled = true);
-        }
-
-        // Resize
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        });
+      });
     </script>
-</body>
+  </body>
 </html>
