--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
     .container {
       text-align:center;
-      animation: reveal 12s infinite;
+      animation: reveal 12s forwards;
       animation-delay:1s;
       opacity:0;
       position:relative;
@@ -38,6 +38,51 @@
       margin:0;
       font-style:italic;
       font-weight:700;
+    }
+    .connect-btn {
+      margin-top:20px;
+      padding:10px 20px;
+      background:#EDB333;
+      color:#000;
+      border:none;
+      border-radius:5px;
+      font-size:1.2rem;
+      font-weight:700;
+      cursor:pointer;
+      opacity:0;
+      animation: connect-appear 12s forwards;
+      animation-delay:1s;
+    }
+    @keyframes connect-appear {
+      0%, 20% { opacity:0; }
+      20%, 80% { opacity:1; }
+      80%, 100% { opacity:0; }
+    }
+    .notification {
+      position:fixed;
+      top:50%;
+      left:50%;
+      transform:translate(-50%,-50%);
+      background:#000;
+      color:#EDB333;
+      padding:20px;
+      border-radius:10px;
+      text-align:center;
+      display:none;
+      z-index:10;
+      box-shadow:0 0 20px #00A3FF;
+    }
+    .ton-options {
+      margin-top:10px;
+    }
+    .ton-btn {
+      margin:5px;
+      padding:10px;
+      background:#00A3FF;
+      color:#000;
+      border:none;
+      border-radius:5px;
+      cursor:pointer;
     }
     .thumbs {
       position:absolute;
@@ -103,6 +148,14 @@
   <div class="particle"></div>
   <div class="container">
     <h1>Positive Impact Ignition Coming Soon</h1>
+    <button class="connect-btn" onclick="showNotification()">Connect TonKeeper</button>
+  </div>
+  <div class="notification" id="notification">
+    <p>Be Among The First To Be Notified When We Go Live & Open DAO Voting Seats.</p>
+    <div class="ton-options">
+      <button class="ton-btn" onclick="payWithTon('ton')">Pay $1 TON</button>
+      <button class="ton-btn" onclick="payWithTon('usdt')">Pay $1 USDT</button>
+    </div>
   </div>
   <div class="thumbs">
     <div class="thumb" id="up-thumb" onclick="vote('up')" aria-label="Vote up for GIV DAO">
@@ -156,6 +209,20 @@
       } catch (err) {
         console.error('Vote error:', err);
       }
+    }
+
+    // TonKeeper functions
+    function showNotification() {
+      document.getElementById('notification').style.display = 'block';
+      setTimeout(() => {
+        document.getElementById('notification').style.display = 'none';
+      }, 5000); // Hide after 5s
+    }
+
+    function payWithTon(currency) {
+      // Placeholder for TON7 integration
+      alert(`Connecting to TonKeeper for $1 ${currency.toUpperCase()} payment. API Key: AE7DDA6OAYX45JIAAAAOYCTFHWC65UK7R3QOXLUVEKWFEVMHRM2W5MFOULQGS2VGXWCGP2Q`);
+      // TODO: Integrate tonweb or ton-connect for actual payment
     }
   </script>
 </body>
