Remove API key exposure from payment alerts for security

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 
     function payWithTon(currency) {
       // Placeholder for TON7 integration
-      alert(`Connecting to TonKeeper for $1 ${currency.toUpperCase()} payment. API Key: AE7DDA6OAYX45JIAAAAOYCTFHWC65UK7R3QOXLUVEKWFEVMHRM2W5MFOULQGS2VGXWCGP2Q`);
-      // TODO: Integrate tonweb or ton-connect for actual payment
+      alert(`Connecting to TonKeeper for $1 ${currency.toUpperCase()} payment. Payment processing...`);
+      // TODO: Integrate tonweb or ton-connect for actual payment without exposing API key
     }
   </script>
 </body>
