--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
   <div class="particle"></div>
   <div class="container">
     <h1>Positive Impact Ignition Coming Soon</h1>
-    <button class="connect-btn" onclick="connectTon()">Connect</button>
+    <div style="display: flex; gap: 10px; justify-content: center;">
+      <button class="connect-btn" onclick="connectTon()">Connect</button>
+      <button class="connect-btn" onclick="showNotification()">Contact</button>
+    </div>
   </div>
   <div class="notification" id="notification">
     <p>Be Among The First To Be Notified When We Go Live & Open DAO Voting Seats.</p>
@@ -213,7 +216,7 @@
 
     // Ton Connect setup
     const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
-      manifestUrl: 'https://your-domain.com/tonconnect-manifest.json', // Replace with actual manifest
+      manifestUrl: 'https://givdao.org/tonconnect-manifest.json',
       buttonRootId: 'ton-connect'
     });
 
@@ -235,10 +238,23 @@
       }, 5000); // Hide after 5s
     }
 
-    function payWithTon(currency) {
-      // Placeholder for TON7 integration
-      alert(`Connecting to TonKeeper for $1 ${currency.toUpperCase()} payment. Payment processing...`);
-      // TODO: Integrate tonweb or ton-connect for actual payment without exposing API key
+    async function payWithTon(currency) {
+      // TON7 integration for GvD using Square API
+      try {
+        const response = await fetch('/api/payments/square/create-payment', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ amount: 1, paymentMethod: 'ton' })
+        });
+        const data = await response.json();
+        if (response.ok) {
+          alert(`Payment successful! Payment ID: ${data.paymentId}`);
+        } else {
+          alert(`Payment failed: ${data.error}`);
+        }
+      } catch (error) {
+        alert('Payment error: ' + error.message);
+      }
     }
   </script>
 </body>
